sync: hosted cloud (#1503)
Submit a pull request for this project.

<!-- If you have an Issue that related to this Pull Request, you can
copy this Issue's description -->

# Why? 
<!-- 
> Related to which issue?
> Why we need this pull request?
> What is the user story for this pull request? 
-->


# What?
<!-- 
> Can you describe this feature in detail?
> Who can benefit from it? 
-->


# How?
<!-- 
> Do you have a simple description of how this pull request is
implemented?
-->

---------

Co-authored-by: Guofeng Chen <66124783+functionChenGuoFeng@users.noreply.github.com>
Co-authored-by: Caedman Ziwen Lan <lanziwen@apitable.com>
Co-authored-by: Kilian <wangkailang@users.noreply.github.com>
Co-authored-by: Harry Yep <git@hode.co.uk>
Co-authored-by: Michael Xiaoliang Chan <mcl_chan@sina.com>
Co-authored-by: Chambers <chenbochao@vikadata.com>
Co-authored-by: Shawn Deng <dengguiheng@apitable.com>
Co-authored-by: Aria <sujian@apitable.com>
Co-authored-by: ziqiang <zhaoziqiang@vikadata.com>
Co-authored-by: Zoe <zhengxu@apitable.com>
Co-authored-by: chenguofeng <1508194634@qq.com>
Co-authored-by: ziqiang <1694392889@qq.com>
Co-authored-by: William Chan <root@williamchan.me>
Co-authored-by: Kelvin Jiawen Pan <panjiawen@apitable.com>
Co-authored-by: Jeremy Yin <jeremyyin2012@gmail.com>
Co-authored-by: yanmingZhang <44792891+quppenge@users.noreply.github.com>
Co-authored-by: wangkailang <wangkailang@vikadata.com>
Co-authored-by: yechen <262000730@qq.com>
Co-authored-by: Michael Xiaoliang Chan <111508006+yo-ooiii@users.noreply.github.com>
Co-authored-by: Zoe <13400804+zoe-icu@users.noreply.github.com>
Co-authored-by: ShawnDeng <dengguiheng@aitable.ai>
Co-authored-by: Evie Wanmei Huang <37546178+wmEvie@users.noreply.github.com>
Co-authored-by: Jover <joverzh@gmail.com>
Co-authored-by: XuKecheng <wsad8254695@outlook.com>
Co-authored-by: xukecheng <xukecheng@aitable.ai>