@@ -37,6 +37,7 @@ import com.alibaba.excel.read.metadata.ReadSheet;
 import com.alibaba.excel.support.ExcelTypeEnum;
 import com.apitable.automation.entity.AutomationRobotEntity;
 import com.apitable.automation.model.AutomationCopyOptions;
+import com.apitable.automation.model.TriggerCopyResultDto;
 import com.apitable.automation.service.IAutomationRobotService;
 import com.apitable.base.enums.DatabaseException;
 import com.apitable.base.enums.ParameterException;
@@ -139,6 +140,7 @@ import com.apitable.workspace.vo.ShowcaseVo.NodeExtra;
 import com.baomidou.mybatisplus.core.toolkit.IdWorker;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.baomidou.mybatisplus.extension.toolkit.SqlHelper;
+import jakarta.annotation.Resource;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -157,7 +159,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Lock;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
-import javax.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.integration.redis.util.RedisLockRegistry;
@@ -546,8 +547,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (nodeIds.size() == sub.size()) {
             return nodeIds;
         }
-        List<String> subNodeIds =
-            sub.stream().map(NodeTreeDTO::getNodeId).collect(Collectors.toList());
+        List<String> subNodeIds = sub.stream().map(NodeTreeDTO::getNodeId).toList();
         sub.stream()
             .filter(i -> i.getPreNodeId() != null && !subNodeIds.contains(i.getPreNodeId()))
             .forEach(node -> {
@@ -1173,7 +1173,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 return copyEffect;
             case AUTOMATION:
                 AutomationCopyOptions automationCopyOptions =
-                    AutomationCopyOptions.builder().sameSpace(true).overriddenName(name).build();
+                    AutomationCopyOptions.builder().sameSpace(true).removeButtonClickedInput(true)
+                        .overriddenName(name).build();
                 iAutomationRobotService.copy(userId,
                     Collections.singletonList(opRo.getNodeId()),
                     automationCopyOptions, newNodeMap);
@@ -1254,7 +1255,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         }
 
         // component node id map
-        Map<String, String> newNodeMap = CollUtil.newHashMap();
+        Map<String, String> newNodeMap = new HashMap<>();
         newNodeMap.put(sourceNodeId, toSaveNodeId);
         switch (nodeType) {
             case ROOT:
@@ -1284,10 +1285,12 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 throw new BusinessException(NodeException.SHARE_NODE_STORE_FAIL);
             case AUTOMATION:
                 AutomationCopyOptions automationCopyOptions =
-                    AutomationCopyOptions.builder().overriddenName(name).build();
+                    AutomationCopyOptions.builder().removeButtonClickedInput(true)
+                        .overriddenName(name).build();
                 iAutomationRobotService.copy(userId,
                     Collections.singletonList(sourceNodeId),
                     automationCopyOptions, newNodeMap);
+
                 break;
             default:
                 break;
@@ -1411,6 +1414,23 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     });
                 options.setDstPermissionFieldsMap(dstPermissionFieldsMap);
             }
+
+            // Copy automation processing
+            if (nodeTypeToNodeIdsMap.containsKey(NodeType.AUTOMATION.getNodeType())) {
+                List<String> automationNodeIds =
+                    nodeTypeToNodeIdsMap.get(NodeType.AUTOMATION.getNodeType()).stream()
+                        .map(NodeShareTree::getNodeId)
+                        .filter(nodeId -> !filterNodeIds.contains(nodeId))
+                        .collect(Collectors.toList());
+                if (CollUtil.isNotEmpty(automationNodeIds)) {
+                    TriggerCopyResultDto result =
+                        iAutomationRobotService.copy(userId, automationNodeIds,
+                            new AutomationCopyOptions(), newNodeMap);
+                    // use for rewrite button field property
+                    options.setNewTriggerMap(result.getNewTriggerMap());
+                }
+            }
+
             for (NodeShareTree subNode : nodeTypeToNodeIdsMap.get(
                 NodeType.DATASHEET.getNodeType())) {
                 if (filterNodeIds.contains(subNode.getNodeId())) {
@@ -1455,18 +1475,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     ResourceType.MIRROR);
             }
         }
-        // Copy automation processing
-        if (nodeTypeToNodeIdsMap.containsKey(NodeType.AUTOMATION.getNodeType())) {
-            List<String> automationNodeIds =
-                nodeTypeToNodeIdsMap.get(NodeType.AUTOMATION.getNodeType()).stream()
-                    .map(NodeShareTree::getNodeId)
-                    .filter(nodeId -> !filterNodeIds.contains(nodeId))
-                    .collect(Collectors.toList());
-            if (CollUtil.isNotEmpty(automationNodeIds)) {
-                iAutomationRobotService.copy(userId, automationNodeIds,
-                    new AutomationCopyOptions(), newNodeMap);
-            }
-        }
+
     }
 
     /**
@@ -1556,7 +1565,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             TemplateException.SUB_NODE_PERMISSION_INSUFFICIENT);
         List<String> filterNodeIds = roleDict.entrySet().stream()
             .filter(entry -> entry.getValue().isGreaterThanOrEqualTo(role))
-            .map(Map.Entry::getKey).collect(Collectors.toList());
+            .map(Map.Entry::getKey).toList();
         ExceptionUtil.isTrue(subNodeIds.size() == filterNodeIds.size(),
             TemplateException.SUB_NODE_PERMISSION_INSUFFICIENT);
         return subNodeIds;
@@ -1712,27 +1721,18 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     public String parseExcel(Long userId, String uuid, String spaceId,
                              Long memberId, String parentNodeId, String viewName, String fileName,
                              String fileSuffix, InputStream inputStream) {
-        ExcelReader excelReader = null;
         MultiSheetReadListener readListener =
             new MultiSheetReadListener(this, userId, uuid, spaceId, memberId,
                 parentNodeId, viewName, fileName);
-        ExcelReaderBuilder readerBuilder;
         ExcelTypeEnum excelType = FileSuffixConstants.XLS.equals(fileSuffix)
             ? ExcelTypeEnum.XLS : ExcelTypeEnum.XLSX;
-        try {
-            readerBuilder = EasyExcel.read(inputStream)
-                .excelType(excelType)
-                .ignoreEmptyRow(false).autoTrim(false);
-            excelReader = readerBuilder.registerReadListener(readListener).build();
+        ExcelReaderBuilder readerBuilder = EasyExcel.read(inputStream)
+            .excelType(excelType)
+            .ignoreEmptyRow(false).autoTrim(false);
+        try (ExcelReader excelReader = readerBuilder.registerReadListener(readListener).build()) {
             List<ReadSheet> readSheets = excelReader.excelExecutor().sheetList();
             excelReader.read(readSheets);
             return readListener.getRetNodeData().getNodeId();
-        } finally {
-            if (excelReader != null) {
-                // Don't forget to close it here.
-                // Temporary files will be created when reading, and the disk will collapse.
-                excelReader.finish();
-            }
         }
     }
 
@@ -1741,23 +1741,13 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     public String parseCsv(Long userId, String uuid, String spaceId, Long memberId,
                            String parentNodeId, String viewName, String fileName,
                            InputStream inputStream) {
-        ExcelReader excelReader = null;
         CsvReadListener readListener =
             new CsvReadListener(this, userId, uuid, spaceId, memberId,
                 parentNodeId, viewName, fileName);
-        try {
-            excelReader = EasyExcel.read(inputStream)
-                .excelType(ExcelTypeEnum.CSV)
-                .registerReadListener(readListener)
-                .build();
+        try (ExcelReader excelReader = EasyExcel.read(inputStream).excelType(ExcelTypeEnum.CSV)
+            .registerReadListener(readListener).build()) {
             excelReader.readAll();
             return readListener.getRetNodeId();
-        } finally {
-            if (excelReader != null) {
-                // Don't forget to close it here.
-                // Temporary files will be created when reading, and the disk will collapse.
-                excelReader.finish();
-            }
         }
     }
 
